--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <script async defer src="JS/Views/RestaurantView.js"></script>
   <script async defer src="JS/script.js"></script>
   <script async defer src="JS/app.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=[YourGoogleAPI]&v=3&callback=Initialize"
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBPsV3qnw-m4u3pxuAad4PfBBe2e0BXrE&v=3&callback=Initialize"
     onerror="handleError()"></script>
 </body>
 
