Fix Async issue

--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
  
   </div>
   <script src="JS/Lib/knockout-3.4.2.js"></script>
+  <script src="Data/locations.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="JS/Views/RestaurantView.js"></script>
-  <script src="JS/Controllers/ForsqController.js"></script>
   <script src="JS/script.js"></script>
+  <script src="JS/Controllers/ForsqController.js"></script>
   <script src="JS/app.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBPsV3qnw-m4u3pxuAad4PfBBe2e0BXrE&v=3&callback=Initialize"
     onerror="handleError()"></script>
